:zap: add vite config path libs

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,18 @@
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
+
+    // Vite config paths 
+    "baseUrl": "./src",
+    // "paths": {
+    //   "@/*": ["./*"]
+    // }
+    "paths": {
+      "src/*": [
+        "./src/*"
+      ]
+    }
   },
   "include": ["src"],
   "references": [{ "path": "./tsconfig.node.json" }]
